--- a/01 - JavaScript Drum Kit/index-FINAL.html
+++ b/01 - JavaScript Drum Kit/index-FINAL.html
@@ -57,30 +57,26 @@
 
     <script>
       
-      window.addEventListener('keydown', function(e){
-        const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`)
-      })
+      function audioplay(e){
+        const audio = document.querySelector(`audio[data-key="${e.keyCode}"`)
+        const key = document.querySelector(`.key[data-key="${e.keyCode}"`)
 
-      function playsound(e) {
-        const sound = document.querySelector(`audio[data-key="${e.keyCode}"]`);
-        const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
-
-        if (!sound) return;
-        sound.currentTime = 0;
-        sound.play();
-        key.classList.add("playing");
+        if(!audio) return
+        audio.currentTime= 0
+        audio.play()
+        key.classList.add("playing")
       }
 
-      function removeTransition(e) {
-        if (e.propertyName !== "transform") return;
-        this.classList.remove("playing");
+      function removeTransition(e){
+        if(e.propertyName!="transform") return
+        this.classList.remove("playing")
       }
 
       const keys = document.querySelectorAll(".key");
       keys.forEach((key) =>
         key.addEventListener("transitionend", removeTransition)
       );
-      document.addEventListener("keydown", playsound);
+      document.addEventListener("keydown", audioplay);
 
     </script>
   </body>
