--- a/02 - JS and CSS Clock/index-FINAL.html
+++ b/02 - JS and CSS Clock/index-FINAL.html
@@ -62,13 +62,37 @@
       background:black;
       position: absolute;
       top:50%;
-
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
      
     }
 
   </style>
 
   <script>
+
+    const secondhand = document.querySelector(".second-hand")
+    const minhand = document.querySelector(".min-hand")
+    const hourhand = document.querySelector(".hour-hand")
+
+function setDate(){
+  const now = new Date();
+  const sec= now.getSeconds()
+  const secDegree = ((sec / 60 ) * 360) + 90;
+secondhand.style.transform = `rotate(${secDegree}deg)`
+
+const min = now.getMinutes()
+const minDegree = ((min / 60 ) * 360) + 90;
+minhand.style.transform = `rotate(${minDegree}deg)`
+
+const hour = now.getHours();
+const hourDegree = ((hour / 12) * 360) + 90
+hourhand.style.transform = `rotate(${hourDegree}deg)`
+}
+
+setInterval(setDate, 1000)
   </script>
 </body>
 </html>
