--- a/02 - JS and CSS Clock/index-FINAL.html
+++ b/02 - JS and CSS Clock/index-FINAL.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>JS + CSS Clock</title>
-</head>
-<body>
-
-
+  <head>
+    <meta charset="UTF-8" />
+    <title>JS + CSS Clock</title>
+  </head>
+  <body>
     <div class="clock">
       <div class="clock-face">
         <div class="hand hour-hand"></div>
@@ -15,84 +13,79 @@
       </div>
     </div>
 
+    <style>
+      html {
+        background: #018ded url(http://unsplash.it/1500/1000?image=881&blur=50);
+        background-size: cover;
+        font-family: "helvetica neue";
+        text-align: center;
+        font-size: 10px;
+      }
 
-  <style>
-    html {
-      background:#018DED url(http://unsplash.it/1500/1000?image=881&blur=50);
-      background-size:cover;
-      font-family:'helvetica neue';
-      text-align: center;
-      font-size: 10px;
-    }
+      body {
+        margin: 0;
+        font-size: 2rem;
+        display: flex;
+        flex: 1;
+        min-height: 100vh;
+        align-items: center;
+      }
 
-    body {
-      margin: 0;
-      font-size: 2rem;
-      display:flex;
-      flex:1;
-      min-height: 100vh;
-      align-items: center;
-    }
+      .clock {
+        width: 30rem;
+        height: 30rem;
+        border: 20px solid white;
+        border-radius: 50%;
+        margin: 50px auto;
+        position: relative;
+        padding: 2rem;
+        box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1), inset 0 0 0 3px #efefef,
+          inset 0 0 10px black, 0 0 10px rgba(0, 0, 0, 0.2);
+      }
 
-    .clock {
-      width: 30rem;
-      height: 30rem;
-      border:20px solid white;
-      border-radius:50%;
-      margin:50px auto;
-      position: relative;
-      padding:2rem;
-      box-shadow:
-        0 0 0 4px rgba(0,0,0,0.1),
-        inset 0 0 0 3px #EFEFEF,
-        inset 0 0 10px black,
-        0 0 10px rgba(0,0,0,0.2);
-    }
+      .clock-face {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        transform: translateY(
+          -3px
+        ); /* account for the height of the clock hands */
+      }
 
-    .clock-face {
-      position: relative;
-      width: 100%;
-      height: 100%;
-      transform: translateY(-3px); /* account for the height of the clock hands */
-    }
+      .hand {
+        width: 50%;
+        height: 6px;
+        background: black;
+        position: absolute;
+        top: 50%;
+        transform-origin: 100%;
+        transform: rotate(90deg);
+        transition: all 0.05s;
+        transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
+      }
+    </style>
 
-    .hand {
-      width:50%;
-      height:6px;
-      background:black;
-      position: absolute;
-      top:50%;
-      transform-origin: 100%;
-      transform: rotate(90deg);
-      transition: all 0.05s;
-      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
-     
-    }
+    <script>
+      const secondhand = document.querySelector(".second-hand");
+      const minhand = document.querySelector(".min-hand");
+      const hourhand = document.querySelector(".hour-hand");
 
-  </style>
+      function setDate() {
+        const now = new Date();
+        const sec = now.getSeconds();
+        const secDegree = (sec / 60) * 360 + 90;
+        secondhand.style.transform = `rotate(${secDegree}deg)`;
 
-  <script>
+        const min = now.getMinutes();
+        const minDegree = (min / 60) * 360 + 90;
+        minhand.style.transform = `rotate(${minDegree}deg)`;
 
-    const secondhand = document.querySelector(".second-hand")
-    const minhand = document.querySelector(".min-hand")
-    const hourhand = document.querySelector(".hour-hand")
+        const hour = now.getHours();
+        const hourDegree = (hour / 12) * 360 + 90;
+        hourhand.style.transform = `rotate(${hourDegree}deg)`;
+      }
 
-function setDate(){
-  const now = new Date();
-  const sec= now.getSeconds()
-  const secDegree = ((sec / 60 ) * 360) + 90;
-secondhand.style.transform = `rotate(${secDegree}deg)`
-
-const min = now.getMinutes()
-const minDegree = ((min / 60 ) * 360) + 90;
-minhand.style.transform = `rotate(${minDegree}deg)`
-
-const hour = now.getHours();
-const hourDegree = ((hour / 12) * 360) + 90
-hourhand.style.transform = `rotate(${hourDegree}deg)`
-}
-
-setInterval(setDate, 1000)
-  </script>
-</body>
+      setInterval(setDate, 1000);
+    </script>
+  </body>
 </html>
