--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 <body>
     
     <h1><a href="./01 - JavaScript Drum Kit/index-FINAL.html">1. DRUM KIT</a></h1>
-    <h1><a href="./02 - JS and CSS Clock/">2. CLOCK</a></h1>
+    <h1><a href="./02 - JS and CSS Clock/index-FINAL.html">2. CLOCK</a></h1>
 </body>
 </html>
