--- a/01 - JavaScript Drum Kit/index-FINAL.html
+++ b/01 - JavaScript Drum Kit/index-FINAL.html
@@ -57,26 +57,33 @@
 
     <script>
       
-      function audioplay(e){
-        const audio = document.querySelector(`audio[data-key="${e.keyCode}"`)
-        const key = document.querySelector(`.key[data-key="${e.keyCode}"`)
+      function removeTransition(e) {
+      if (e.propertyName !== 'transform') return;
+      e.target.classList.remove('playing');
+    }
 
-        if(!audio) return
-        audio.currentTime= 0
-        audio.play()
-        key.classList.add("playing")
-      }
+    function playSound(keyCode) {
+      const audio = document.querySelector(`audio[data-key="${keyCode}"]`);
+      const key = document.querySelector(`div[data-key="${keyCode}"]`);
+      if (!audio) return;
 
-      function removeTransition(e){
-        if(e.propertyName!="transform") return
-        this.classList.remove("playing")
-      }
+      key.classList.add('playing');
+      audio.currentTime = 0;
+      audio.play();
+    }
 
-      const keys = document.querySelectorAll(".key");
-      keys.forEach((key) =>
-        key.addEventListener("transitionend", removeTransition)
-      );
-      document.addEventListener("keydown", audioplay);
+    const keys = Array.from(document.querySelectorAll('.key'));
+    keys.forEach(key => {
+      key.addEventListener('transitionend', removeTransition);
+      key.addEventListener('click', function() {
+        const keyCode = this.getAttribute('data-key');
+        playSound(keyCode);
+      });
+    });
+
+    window.addEventListener('keydown', function(e) {
+      playSound(e.keyCode);
+    });
 
     </script>
   </body>
