--- a/02 - JS and CSS Clock/index-FINAL.html
+++ b/02 - JS and CSS Clock/index-FINAL.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>JS + CSS Clock</title>
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <title>JS + CSS Clock</title>
+  <link rel="icon" href="https://fav.farm/✅" />
+</head>
+<body>
+
+
     <div class="clock">
       <div class="clock-face">
         <div class="hand hour-hand"></div>
@@ -13,79 +16,115 @@
       </div>
     </div>
 
-    <style>
-      html {
-        background: #018ded url(http://unsplash.it/1500/1000?image=881&blur=50);
-        background-size: cover;
-        font-family: "helvetica neue";
-        text-align: center;
-        font-size: 10px;
-      }
 
-      body {
-        margin: 0;
-        font-size: 2rem;
-        display: flex;
-        flex: 1;
-        min-height: 100vh;
-        align-items: center;
-      }
+  <style>
+    html {
+      background: #018DED url(https://unsplash.it/1500/1000?image=881&blur=5);
+      background-size: cover;
+      font-family: 'helvetica neue';
+      text-align: center;
+      font-size: 10px;
+    }
 
-      .clock {
-        width: 30rem;
-        height: 30rem;
-        border: 20px solid white;
-        border-radius: 50%;
-        margin: 50px auto;
-        position: relative;
-        padding: 2rem;
-        box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1), inset 0 0 0 3px #efefef,
-          inset 0 0 10px black, 0 0 10px rgba(0, 0, 0, 0.2);
-      }
+    body {
+      margin: 0;
+      font-size: 2rem;
+      display: flex;
+      flex: 1;
+      min-height: 100vh;
+      align-items: center;
+    }
 
-      .clock-face {
-        position: relative;
-        width: 100%;
-        height: 100%;
-        transform: translateY(
-          -3px
-        ); /* account for the height of the clock hands */
-      }
+    .clock {
+      width: 30rem;
+      height: 30rem;
+      border: 40px solid white;
+      border-radius: 50%;
+      margin: 50px auto;
+      position: relative;
+      padding: 2rem;
+      box-shadow:
+        0 0 0 4px rgba(0,0,0,0.1),
+        inset 0 0 0 3px #EFEFEF,
+        inset 0 0 10px black,
+        0 0 10px rgba(0,0,0,0.2);
+    }
 
-      .hand {
-        width: 50%;
-        height: 6px;
-        background: black;
-        position: absolute;
-        top: 50%;
-        transform-origin: 100%;
-        transform: rotate(90deg);
-        transition: all 0.05s;
-        transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
-      }
-    </style>
+    .clock-face {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      transform: translateY(-3px); /* account for the height of the clock hands */
+    }
 
-    <script>
-      const secondhand = document.querySelector(".second-hand");
-      const minhand = document.querySelector(".min-hand");
-      const hourhand = document.querySelector(".hour-hand");
+    .hand {
+      width: 50%;
+      height: 6px;
+      background: black;
+      position: absolute;
+      top: 50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
+    }
+    .hour {
+      position: absolute;
+      transform-origin: 50% 100%;
+      font-size: 3rem;
+      color: black;
+    }
+</style>
 
-      function setDate() {
-        const now = new Date();
-        const sec = now.getSeconds();
-        const secDegree = (sec / 60) * 360 + 90;
-        secondhand.style.transform = `rotate(${secDegree}deg)`;
+<script>
+  const secondHand = document.querySelector('.second-hand');
+  const minsHand = document.querySelector('.min-hand');
+  const hourHand = document.querySelector('.hour-hand');
+  const clockFace = document.querySelector('.clock-face');
 
-        const min = now.getMinutes();
-        const minDegree = (min / 60) * 360 + 90;
-        minhand.style.transform = `rotate(${minDegree}deg)`;
+function addHourNumbers() {
+  // Create and append hour numbers to the clock face
+  for (let i = 1; i <= 12; i++) {
+    const hourElement = document.createElement('div');
+    hourElement.classList.add('hour');
+    hourElement.textContent = i;
 
-        const hour = now.getHours();
-        const hourDegree = (hour / 12) * 360 + 90;
-        hourhand.style.transform = `rotate(${hourDegree}deg)`;
-      }
+    // Position the hour number around the clock face
+    const angle = (i - 3) * 30 + 90; // 30 degrees between each hour, starting from the 9 o'clock position
+    const radius = 63; // Adjust the radius as needed
+    const x = 45 + radius * Math.sin(angle * (Math.PI / 180));
+    const y = 45 - radius * Math.cos(angle * (Math.PI / 180));
+    hourElement.style.left = `${x}%`;
+    hourElement.style.top = `${y}%`;
 
-      setInterval(setDate, 1000);
-    </script>
-  </body>
+    clockFace.appendChild(hourElement);
+  }
+}
+
+
+
+  function setDate() {
+    const now = new Date();
+
+    const seconds = now.getSeconds();
+    const secondsDegrees = ((seconds / 60) * 360) + 90;
+    secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+
+    const mins = now.getMinutes();
+    const minsDegrees = ((mins / 60) * 360) + ((seconds/60)*6) + 90;
+    minsHand.style.transform = `rotate(${minsDegrees}deg)`;
+
+    const hour = now.getHours();
+    const hourDegrees = ((hour / 12) * 360) + ((mins/60)*30) + 90;
+    hourHand.style.transform = `rotate(${hourDegrees}deg)`;
+    console.log(hour)
+
+  }
+  addHourNumbers();
+  setInterval(setDate, 1000);
+
+  setDate();
+
+</script>
+</body>
 </html>
