--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <h1><a href="./01 - JavaScript Drum Kit/index-FINAL.html">1. DRUM KIT</a></h1>
     <h1><a href="./02 - JS and CSS Clock/index-FINAL.html">2. CLOCK</a></h1>
     <h1><a href="./03 - CSS Variables/index-FINAL.html">3. CSS VARIABLES</a></h1>
-    <h1><a href="./05 - Flex Panel Gallery/index-FINAL.html">4. FLEX PANEL GALLERY</a></h1>
+    <h1><a href="./04 - Array Cardio Day 1/index-FINAL.html">4. Array Cardio Day 1</a></h1>
+    <h1><a href="./05 - Flex Panel Gallery/index-FINAL.html">5. FLEX PANEL GALLERY</a></h1>
+    <h1><a href="./06 - Type Ahead/index-FINAL.html">6. Type Ahead</a></h1>
 </body>
 </html>
