--- a/index.html
+++ b/index.html
@@ -5,23 +5,76 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>30 Day JS Challenge</title>
-    <style>
-        a{
-            text-decoration: none;
 
+    <style>
+        a {
+            text-decoration: none;
         }
-        h1{
+
+        h1 {
             font-size: 1.2rem;
+        }
+
+        .card {
+            border: 1px solid #ccc;
+            margin: 10px;
+            padding: 10px;
+            width: 300px;
+            text-align: center;
+ 
+        }
+
+        .card img {
+            max-width: 100%;
+            height: auto;
+        }
+        .challenge, h1{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            text-align: center;
+        }
+
+        .head{
+            font-size: 3rem;
         }
     </style>
 </head>
 <body>
-    
-    <h1><a href="./01 - JavaScript Drum Kit/index-FINAL.html">1. DRUM KIT</a></h1>
-    <h1><a href="./02 - JS and CSS Clock/index-FINAL.html">2. CLOCK</a></h1>
-    <h1><a href="./03 - CSS Variables/index-FINAL.html">3. CSS VARIABLES</a></h1>
-    <h1><a href="./04 - Array Cardio Day 1/index-FINAL.html">4. Array Cardio Day 1</a></h1>
-    <h1><a href="./05 - Flex Panel Gallery/index-FINAL.html">5. FLEX PANEL GALLERY</a></h1>
-    <h1><a href="./06 - Type Ahead/index-FINAL.html">6. Type Ahead</a></h1>
+    <h1 class="head">JavaScript 30 day Challenge</h1>
+<div class="challenge">
+
+</div>
+<script>
+    const challenges = [
+        { title: '1. DRUM KIT', link: './01 - JavaScript Drum Kit/index-FINAL.html' },
+        { title: '2. CLOCK', link: './02 - JS and CSS Clock/index-FINAL.html' },
+        { title: '3. CSS VARIABLES', link: './03 - CSS Variables/index-FINAL.html' },
+        { title: '4. Array Cardio Day 1', link: './04 - Array Cardio Day 1/index-FINAL.html' },
+        { title: '5. FLEX PANEL GALLERY', link: './05 - Flex Panel Gallery/index-FINAL.html' },
+        { title: '6. Type Ahead', link: './06 - Type Ahead/index-FINAL.html' },
+        { title: '7. Array Cardio Day 2', link: './07 - Array Cardio Day 2/index-FINAL.html' },
+        { title: '8. Key Sequence Detection', link: './12 - Key Sequence Detection/index-FINAL.html' }
+    ];
+
+    const card = document.querySelector('.challenge')
+    card.innerHTML += challenges.map(challenge => `
+        <div class="card">
+            <a href="${challenge.link}">
+                <h1>${challenge.title.toUpperCase()}</h1>
+
+            </a>
+        </div>
+    `).join('');
+
+
+    // <div class="card">
+    //         <a href="${challenge.link}">
+    //             <h1>${challenge.title}</h1>
+    //            <img src="${challenge.link}" alt="${challenge.title} Image">
+    //         </a>
+    //     </div>
+</script>
+
 </body>
 </html>
