--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </style>
 </head>
 <body>
-    <h1 class="head">JavaScript 30 day Challenge</h1>
+    <h1 class="head" >JavaScript 30 day Challenge</h1>
 <div class="challenge">
 
 </div>
@@ -54,7 +54,9 @@
         { title: '5. FLEX PANEL GALLERY', link: './05 - Flex Panel Gallery/index-FINAL.html' },
         { title: '6. Type Ahead', link: './06 - Type Ahead/index-FINAL.html' },
         { title: '7. Array Cardio Day 2', link: './07 - Array Cardio Day 2/index-FINAL.html' },
-        { title: '8. Key Sequence Detection', link: './12 - Key Sequence Detection/index-FINAL.html' }
+        { title: '8. Key Sequence Detection', link: './12 - Key Sequence Detection/index-FINAL.html' },
+        { title: '9. Fun with HTML5 Canvas', link: './08 - Fun with HTML5 Canvas/index-FINAL.html' }
+        { title: '10. Dev Tools Domination', link: './09 - Dev Tools Domination/index-FINAL.html' }
     ];
 
     const card = document.querySelector('.challenge')
