--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         { title: '6. Type Ahead', link: './06 - Type Ahead/index-FINAL.html' },
         { title: '7. Array Cardio Day 2', link: './07 - Array Cardio Day 2/index-FINAL.html' },
         { title: '8. Key Sequence Detection', link: './12 - Key Sequence Detection/index-FINAL.html' },
-        { title: '9. Fun with HTML5 Canvas', link: './08 - Fun with HTML5 Canvas/index-FINAL.html' }
+        { title: '9. Fun with HTML5 Canvas', link: './08 - Fun with HTML5 Canvas/index-FINAL.html' },
         { title: '10. Dev Tools Domination', link: './09 - Dev Tools Domination/index-FINAL.html' }
     ];
 
