--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </style>
 </head>
 <body>
-    <h1 class="head" >JavaScript 30 day Challenge</h1>
+    <h1 class="head">JavaScript 30 day Challenge</h1>
 <div class="challenge">
 
 </div>
@@ -56,7 +56,9 @@
         { title: '7. Array Cardio Day 2', link: './07 - Array Cardio Day 2/index-FINAL.html' },
         { title: '8. Key Sequence Detection', link: './12 - Key Sequence Detection/index-FINAL.html' },
         { title: '9. Fun with HTML5 Canvas', link: './08 - Fun with HTML5 Canvas/index-FINAL.html' },
-        { title: '10. Dev Tools Domination', link: './09 - Dev Tools Domination/index-FINAL.html' }
+        { title: '10. Dev Tools Domination', link: './09 - Dev Tools Domination/index-FINAL.html' },
+        { title: '11. Hold Shift and Check Boxes', link: './10 - Hold Shift and Check Checkboxes/index-FINAL.html' },
+        { title: '12. Slide in on Scroll', link: './13 - Slide in on Scroll/index-FINAL.html' }
     ];
 
     const card = document.querySelector('.challenge')
