--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
         { title: '9. Fun with HTML5 Canvas', link: './08 - Fun with HTML5 Canvas/index-FINAL.html' },
         { title: '10. Dev Tools Domination', link: './09 - Dev Tools Domination/index-FINAL.html' },
         { title: '11. Hold Shift and Check Boxes', link: './10 - Hold Shift and Check Checkboxes/index-FINAL.html' },
-        { title: '12. Slide in on Scroll', link: './13 - Slide in on Scroll/index-FINAL.html' }
+        { title: '12. Slide in on Scroll', link: './13 - Slide in on Scroll/index-FINAL.html' },
+        { title: '13. Sort without Article', link: './17 - Sort Without Articles/index-FINAL.html' },
+        { title: '14. Mouse Move Shadow', link: './16 - Mouse Move Shadow/index-FINAL.html' },
     ];
 
     const card = document.querySelector('.challenge')
